correction gap img cards activités

--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ h1 {
 .activites-card {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
+    gap: 30px;
     background-color: white;
 }
 
